--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -3,8 +3,11 @@ const projects = [
     { name: "spotify-ws", url: "https://github.com/skidoodle/spotify-ws", desc: "Gets now-playing-song from Spotify with WebSockets." },
     { name: "ipinfo", url: "https://github.com/skidoodle/ipinfo", desc: "Shows details about any IP address or ASN." },
     { name: "hostinfo", url: "https://github.com/skidoodle/hostinfo", desc: "Browser extension showing website origin details." },
+    { name: "mediaproxy", url: "https://github.com/skidoodle/mediaproxy" desc: "Proxy for caching and optimizing media." },
+    { name: "pastebin", url: "https://github.com/skidoodle/pastebin", desc: "Another simple pastebin app." },
     { name: "albert.lol", url: "https://github.com/skidoodle/albert.lol", desc: "You're looking at it, built with Astro." },
     { name: "budgetable", url: "https://github.com/skidoodle/budgetable", desc: "Tracks items to buy later." },
+    { name: "watch-together", url: "https://github.com/skidoodle/watch-together", desc: "Watch YouTube together with your friends." },
     { name: "erettsegi-browser", url: "https://github.com/skidoodle/erettsegi-browser", desc: "Finds previous Hungarian graduation exams." },
     { name: "ncore-stats", url: "https://github.com/skidoodle/ncore-stats", desc: "Tracks profile activity on nCore." },
     { name: "ncore-leaderboard", url: "https://github.com/skidoodle/ncore-leaderboard", desc: "Scrapes and sorts profiles from nCore." },
