--- a/src/components/socials.astro
+++ b/src/components/socials.astro
@@ -1,47 +1,60 @@
-<section class="socials">
-    <h2>~/socials</h2>
-    <nav>
-        <a href="https://github.com/skidoodle" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
-            <img src="/static/icons/github.svg" alt="GitHub Profile">
-        </a>
-        <a href="https://steamcommunity.com/id/_albert" target="_blank" rel="noopener noreferrer" aria-label="Steam">
-            <img src="/static/icons/steam.svg" alt="Steam Profile">
-        </a>
-        <a href="mailto:contact@albert.lol" aria-label="Email">
-            <img src="/static/icons/mail.svg" alt="Email Contact">
-        </a>
-        <a href="https://discord.com/users/637745537369767936" target="_blank" rel="noopener noreferrer" aria-label="Discord">
-            <img src="/static/icons/discord.svg" alt="Discord Profile">
-        </a>
-    </nav>
+---
+import Icon from './icon.astro'
+---
+
+<section class='socials'>
+  <h2>~/socials</h2>
+  <nav>
+    <a
+      href='https://github.com/skidoodle'
+      target='_blank'
+      rel='noopener noreferrer'
+      aria-label='GitHub'>
+      <Icon name='github' />
+    </a>
+    <a
+      href='https://steamcommunity.com/id/_albert'
+      target='_blank'
+      rel='noopener noreferrer'
+      aria-label='Steam'>
+      <Icon name='steam' />
+    </a>
+    <a href='mailto:contact@albert.lol' aria-label='Email'>
+      <Icon name='mail' />
+    </a>
+    <a
+      href='https://discord.com/users/637745537369767936'
+      target='_blank'
+      rel='noopener noreferrer'
+      aria-label='Discord'>
+      <Icon name='discord' />
+    </a>
+  </nav>
 </section>
 
 <style>
-    .socials nav {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        gap: 1.5rem;
-        margin-inline-start: var(--spacing-md);
-    }
+  .socials nav {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 1.5rem;
+    margin-inline-start: var(--spacing-md);
+  }
 
-    .socials a {
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-        padding: 0.3em;
-        border-radius: 50%;
-        transition: opacity 0.2s, box-shadow 0.2s;
-    }
+  .socials a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.3em;
+    border-radius: 50%;
+    color: var(--text-color);
+    transition:
+      color 0.2s,
+      transform 0.2s;
+  }
 
-    .socials a:hover {
-        opacity: 0.7;
-    }
-
-    .socials img {
-        display: block;
-        width: 1.5em;
-        height: 1.5em;
-        filter: brightness(0) saturate(100%) invert(1);
-    }
+  .socials a:hover {
+    color: var(--primary-color);
+    transform: scale(1.1);
+  }
 </style>
