feat: add Services component and display it on the homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Nowplaying from '../components/nowplaying.astro'
 import Whoami from '../components/whoami.astro'
 import Socials from '../components/socials.astro'
 import Projects from '../components/projects.astro'
+import Services from '../components/services.astro'
 import Setup from '../components/setup.astro'
 
 const title = 'albert'
@@ -18,5 +19,6 @@ const description =
   <Whoami />
   <Socials />
   <Projects />
+  <Services />
   <Setup />
 </Layout>
