add new project

--- a/src/components/setup.astro
+++ b/src/components/setup.astro
@@ -1,67 +1,67 @@
-<section class='setup details-list'>
-  <details>
-    <summary>~/setup</summary>
-    <div>
-      <dl>
-        <dt>PC</dt>
-        <dd><b>OS:</b> Windows 11 Pro</dd>
-        <dd><b>CPU:</b> Ryzen 5 5600X</dd>
-        <dd><b>GPU:</b> RX 6700</dd>
-        <dd><b>RAM:</b> 48 GB</dd>
-        <dd>
-          <div class='storage-layout'>
-            <p><b>Storage:</b></p>
-            <div class='storage-items'>
-              <p>Samsung 990 Pro 1TB</p>
-              <p>Crucial P1 1TB</p>
-              <p>Seagate Barracuda 2TB</p>
-            </div>
-          </div>
-        </dd>
+<section class="setup details-list">
+    <details>
+        <summary>~/setup</summary>
+        <div>
+            <dl>
+                <dt>PC</dt>
+                <dd><b>OS:</b> Windows 11 Pro</dd>
+                <dd><b>CPU:</b> Ryzen 5 5600X</dd>
+                <dd><b>GPU:</b> RX 6700</dd>
+                <dd><b>RAM:</b> 48 GB</dd>
+                <dd>
+                    <div class="storage-layout">
+                        <p><b>Storage:</b></p>
+                        <div class="storage-items">
+                            <p>Samsung 990 Pro 1TB</p>
+                            <p>Crucial P1 1TB</p>
+                            <p>Seagate Barracuda 2TB</p>
+                        </div>
+                    </div>
+                </dd>
 
-        <dt>Server</dt>
-        <dd><b>OS:</b> Proxmox VE</dd>
-        <dd><b>CPU:</b> Dual Xeon E5-2680 v4</dd>
-        <dd><b>RAM:</b> 128 GB</dd>
-        <dd>
-          <div class='storage-layout'>
-            <p><b>Storage:</b></p>
-            <div class='storage-items'>
-              <p>2x WD Black SN770 1TB (MIRROR)</p>
-              <p>8x Toshiba Enterprise 6TB (RAID-Z2)</p>
-            </div>
-          </div>
-        </dd>
+                <dt>Server</dt>
+                <dd><b>OS:</b> Proxmox VE</dd>
+                <dd><b>CPU:</b> Dual Xeon E5-2680 v4</dd>
+                <dd><b>RAM:</b> 128 GB</dd>
+                <dd>
+                    <div class="storage-layout">
+                        <p><b>Storage:</b></p>
+                        <div class="storage-items">
+                            <p>2x WD Black SN770 1TB (MIRROR)</p>
+                            <p>8x Toshiba Enterprise 6TB (RAID-Z2)</p>
+                        </div>
+                    </div>
+                </dd>
 
-        <dt>Laptop</dt>
-        <dd><b>OS:</b> Windows 11 Pro</dd>
-        <dd><b>CPU:</b> Ryzen 5 7520U</dd>
-        <dd><b>GPU:</b> Radeon 610M</dd>
-        <dd><b>RAM:</b> 16 GB</dd>
-        <dd><b>Storage:</b> Samsung 480GB</dd>
+                <dt>Laptop</dt>
+                <dd><b>OS:</b> Windows 11 Pro</dd>
+                <dd><b>CPU:</b> Ryzen 5 7520U</dd>
+                <dd><b>GPU:</b> Radeon 610M</dd>
+                <dd><b>RAM:</b> 16 GB</dd>
+                <dd><b>Storage:</b> Samsung 480GB</dd>
 
-        <dt>Test</dt>
-        <dd><b>CPU:</b> Ryzen 3 1300X</dd>
-        <dd><b>RAM:</b> 32 GB</dd>
-        <dd><b>Storage:</b> Samsung 970 EVO Plus 250GB</dd>
-      </dl>
-    </div>
-  </details>
+                <dt>Test</dt>
+                <dd><b>CPU:</b> Ryzen 3 1300X</dd>
+                <dd><b>RAM:</b> 32 GB</dd>
+                <dd><b>Storage:</b> Samsung 970 EVO Plus 250GB</dd>
+            </dl>
+        </div>
+    </details>
 </section>
 
 <style>
-  .storage-layout {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 0.5rem;
-  }
+    .storage-layout {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 0.5rem;
+    }
 
-  .storage-layout p,
-  .storage-items p {
-    margin-inline-start: 0;
-  }
+    .storage-layout p,
+    .storage-items p {
+        margin-inline-start: 0;
+    }
 
-  .storage-items {
-    margin-inline-start: 1ch;
-  }
+    .storage-items {
+        margin-inline-start: 1ch;
+    }
 </style>
