--- a/src/components/nowplaying.astro
+++ b/src/components/nowplaying.astro
@@ -1,21 +1,21 @@
-<span id='nowplaying'></span>
+<span id="nowplaying"></span>
 
 <script>
-  import { SpotifyClient } from '../lib/spotify'
-  new SpotifyClient('wss://ws.albert.lol', 'nowplaying').start()
+    import { SpotifyClient } from "../lib/spotify";
+    new SpotifyClient("wss://ws.albert.lol", "nowplaying").start();
 </script>
 
 <style>
-  #nowplaying {
-    display: block;
-    margin: 5px 0 5px var(--spacing-md);
-    font-size: 1rem;
-    line-height: 1;
-    height: 2em;
-    max-width: 90%;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    min-height: 1em;
-  }
+    #nowplaying {
+        display: block;
+        margin: 5px 0 5px var(--spacing-md);
+        font-size: 1rem;
+        line-height: 1;
+        height: 2em;
+        max-width: 90%;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        min-height: 1em;
+    }
 </style>
