--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,9 @@
 @font-face {
-    font-family: 'JetBrains Mono';
+    font-family: "JetBrains Mono";
     font-style: normal;
     font-weight: 100 800;
     font-display: swap;
-    src: url('/static/fonts/jetbrains.woff2') format('woff2');
+    src: url("/static/fonts/jetbrains.woff2") format("woff2");
 }
 
 :root {
@@ -95,17 +95,17 @@ hr {
 }
 
 .details-list summary::after {
-    content: ' ▼';
+    content: " ▼";
     font-size: 0.6em;
     opacity: 0.7;
     margin-inline-start: 0.3rem;
 }
 
-.details-list details[open]>summary::after {
-    content: ' ▲';
+.details-list details[open] > summary::after {
+    content: " ▲";
 }
 
-.details-list details>div {
+.details-list details > div {
     margin-top: 1rem;
     margin-inline-start: var(--spacing-md);
 }
