--- a/src/components/socials.astro
+++ b/src/components/socials.astro
@@ -5,16 +5,31 @@ import Icon from "./icon.astro";
 <section class="socials">
     <h2>~/socials</h2>
     <nav>
-        <a href="https://github.com/skidoodle" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+        <a
+            href="https://github.com/skidoodle"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="GitHub"
+        >
             <Icon name="github" />
         </a>
-        <a href="https://steamcommunity.com/id/_albert" target="_blank" rel="noopener noreferrer" aria-label="Steam">
+        <a
+            href="https://steamcommunity.com/id/_albert"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Steam"
+        >
             <Icon name="steam" />
         </a>
         <a href="mailto:contact@albert.lol" aria-label="Email">
             <Icon name="mail" />
         </a>
-        <a href="https://discord.com/users/637745537369767936" target="_blank" rel="noopener noreferrer" aria-label="Discord">
+        <a
+            href="https://discord.com/users/637745537369767936"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Discord"
+        >
             <Icon name="discord" />
         </a>
     </nav>
