--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,8 @@ import Projects from "../components/projects.astro";
 import Setup from "../components/setup.astro";
 
 const title = "albert";
-const description = "A 21-year-old developer and tech enthusiast. I enjoy working on my homelab and coding in TypeScript and Go.";
+const description =
+    "A 21-year-old from Hungary focused on infrastructure. I primarily use Go and TypeScript.";
 ---
 
 <Layout title={title} description={description}>
