--- a/src/components/whoami.astro
+++ b/src/components/whoami.astro
@@ -1,19 +1,8 @@
----
-const birthDate = new Date("2004-07-22");
-const today = new Date();
-
-let age = today.getFullYear() - birthDate.getFullYear();
-const monthDiff = today.getMonth() - birthDate.getMonth();
-
-if (monthDiff < 0 || (monthDiff === 0 && today.getDate() < birthDate.getDate())) {
-    age--;
-}
----
-
 <section class="whoami">
     <h2>~/whoami</h2>
     <p>
-        I'm a <span id="age">{age}</span>-year-old developer and tech enthusiast. I enjoy working on my homelab and coding in TypeScript and Go.
+        A 21-year-old from Hungary focused on infrastructure. I primarily use Go
+        and TypeScript.
     </p>
 </section>
 
